--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <!-- Coluna de Monitoramento -->
         <div class="column">
-            <h2>Monitoramento</h2>
+            <h2>Monitoramento Tarefas GLPI</h2>
             <div class="form-group">
                 <label for="task-name">Usuário</label>
                 <input type="text" id="task-name" placeholder="Usuário Glpi">
