--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <button id="schedule-btn">Organizar Logs</button>
             <div class="output" id="task-output">
-                <p>Aguardando atualizações...</p>
+                <!-- <p>Aguardando atualizações...</p> -->
             </div>
         </div>
         <!-- Coluna de Monitoramento -->
@@ -48,33 +48,7 @@
             <span class="errGlpi"></span>
             <button id="monitor-btn">Tramitar Tarefas</button>
             <div class="output" id="monitor-output">
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
-                <p>Aguardando dados...</p>
+                <!-- <p>Aguardando dados...</p> -->
             </div>
         </div> 
     </div>
